--- a/index.html
+++ b/index.html
@@ -1,51 +1,68 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz App</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
     <div class="container">
-        <div class="row">
-            <h1 class="text-center">Futurama Quiz</h1>
-        </div>
-
+      <div class="row">
+        <h1 class="text-center">Futurama Quiz</h1>
+      </div>
     </div>
     <div class="container">
-        <div class="row">
-            <h2 class="text-center">Statistics</h2>
-            <div class="row border">
-                <div class="col">
-                    <p>Correct: <span id="correct"></span></p> <!--Antal rätta svar visas här-->
-                </div>
-                <div class="col">
-                    <p>Incorrect: <span id="incorrect"></span></p> <!--Antal felaktiga svar visas här-->
-                </div>
-                <div class="col">
-                    <p>Answered: <span id="answered"></span></p> <!--Totalt antal  svar visas här-->
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
+      <div class="row">
+        <h2 class="text-center">Statistics</h2>
         <div class="row border">
-            <h1 class="text-center"> Questions</h1>
-            <!--Här hamnar frågorna-->
+          <div class="col">
+            <p>Correct: <span id="correct"></span></p>
+            <!--Antal rätta svar visas här-->
+          </div>
+          <div class="col">
+            <p>Incorrect: <span id="incorrect"></span></p>
+            <!--Antal felaktiga svar visas här-->
+          </div>
+          <div class="col">
+            <p>Answered: <span id="answered"></span></p>
+            <!--Totalt antal  svar visas här-->
+          </div>
         </div>
+      </div>
     </div>
 
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <!--Här hamnar meddelandet med om användaren svarade rätt eller fel--> 
-            </div>
-        </div>
+      <div class="row border">
+        <h1 class="text-center">Questions</h1>
+        <!--Här hamnar frågorna-->
+
+        <!-- Knappar för Answer och Next som ska vara dolda när de inte ska används.
+        <button id="answer-btn" class="btn btn-primary">Answer</button>
+        <button id="next-btn" class="btn btn-primary">Next</button>-->
+      </div>
     </div>
 
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <!--Här hamnar meddelandet med om användaren svarade rätt eller fel-->
+        </div>
+      </div>
+    </div>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</body>
+    <script src="scripts/updateCounter.js"></script>
+    <script src="scripts/nextQuestion.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+  </body>
 </html>
