--- a/index.html
+++ b/index.html
@@ -33,19 +33,28 @@
     <div class="container">
         <div class="row border">
             <h1 class="text-center"> Questions</h1>
-            <!--Här hamnar frågorna-->
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <!--Här hamnar meddelandet med om användaren svarade rätt eller fel--> 
+            <div class="quiz-container">
+                <!--Här hamnar frågorna-->
             </div>
         </div>
     </div>
 
+    <div class="messageContainer">
+        <div class="row">
+            <div class="col">
+                <!--Här hamnar meddelandet med om användaren svarade rätt eller fel-->
+            </div>
+        </div>
+    </div>
+    <div class="roundStatisticsContainer">
+        <div class="row border">
+            <div class="col">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
