--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<style>
+    .custom-radio {
+        width: 2rem; 
+        height: 2rem; 
+    }
+</style>
 </head>
 <body>
     <div class="container">
@@ -18,13 +24,13 @@
             <h2 class="text-center">Statistics</h2>
             <div class="row border">
                 <div class="col">
-                    <p>Correct: <span id="correct"></span></p> <!--Antal rätta svar visas här-->
+                    <p class="fs-4">Correct: <span id="correct"></span></p> <!--Antal rätta svar visas här-->
                 </div>
                 <div class="col">
-                    <p>Incorrect: <span id="incorrect"></span></p> <!--Antal felaktiga svar visas här-->
+                    <p class="fs-4">Incorrect: <span id="incorrect"></span></p> <!--Antal felaktiga svar visas här-->
                 </div>
                 <div class="col">
-                    <p>Answered: <span id="answered"></span></p> <!--Totalt antal  svar visas här-->
+                    <p class="fs-4">Answered: <span id="answered"></span></p> <!--Totalt antal  svar visas här-->
                 </div>
             </div>
         </div>
@@ -39,7 +45,7 @@
         </div>
     </div>
 
-    <div class="messageContainer">
+    <div class="messageContainer text-center">
         <div class="row">
             <div class="col">
                 <!--Här hamnar meddelandet med om användaren svarade rätt eller fel-->
