--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<style>
-    .custom-radio {
-        width: 2rem; 
-        height: 2rem; 
-    }
-</style>
+    <style>
+        .custom-radio {
+            width: 2rem;
+            height: 2rem;
+        }
+
+        body {
+            background-image: url('bakgrund.jpg'); /* Replace 'futurama.jpg' with the path to your Futurama image */
+            background-size: cover;
+            background-position: center;
+        }
+
+        body * {
+                background-color: yellow; /* Set yellow background color */
+        }
+    </style>
 </head>
 <body>
     <div class="container">
